--- a/self-drive/summary.ipynb
+++ b/self-drive/summary.ipynb
@@ -2,50 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "Using TensorFlow backend.\n"
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from model import Model\n",
     "from image_preprocess import Preprocess\n",
     "from tensorflow.keras.models import load_model\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "dataPath = 'path/here'\n",
     "md = Model(dataPath, 0, 0, 0, 0)\n",
     "pr = Preprocess(dataPath + 'image_data\\\\')\n",
-    "model = load_model('./models/model_final.h5')"
+    "model = load_model('model_best.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "r2_score: 28.2%\nmse: 0.00187\n"
+     "text": "r2_score: 56.0%\nmse: 0.00154\n"
     }
    ],
    "source": [
     "_, X_valid, _, y_valid = md.splitData()\n",
-    "X_test_true, y_test_true = next(pr.image_data_generator(X_valid, y_valid, 100, False))\n",
-    "\n",
+    "X_test_true, y_test_true = next(pr.image_data_generator(X_valid, y_valid, 3000, False))\n",
     "y_pred = model.predict(X_test_true)\n",
+    "\n",
     "mse = mean_squared_error(y_test_true, y_pred)\n",
     "r2 = r2_score(y_test_true, y_pred)\n",
     "\n",
     "print('r2_score: ' + \"{:.1%}\".format(r2))\n",
     "print('mse: ' + \"{:.5f}\".format(mse))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
